# Live_Trading_Bot

./: .gitignore  ARCHITECTURE_DIAGRAM.md  DELIVERABLES_INVENTORY.md  DIAGNOSTIC_GUIDE.md  DOCUMENTATION_INDEX.md  EURUSD_DOCUMENTATION_INDEX.md  EURUSD_TUNING_ANALYSIS.md  EURUSD_TUNING_INDEX.md  EURUSD_VERIFICATION_REPORT.md  GBPUSD_TUNING_CHANGES_2026-06-26.md  LICENSE  QUICK_REFERENCE_FIX.md  QUICK_START.md  README_FIX_COMPLETE.md  TROUBLESHOOTING_GUIDE.md  USDCAD_SHORT_COMPLETION_REPORT.md  USDCAD_SHORT_INDEX.md  USDCAD_SHORT_SUMMARY.md  USDCAD_SHORT_TECHNICAL_ANALYSIS.md  USDCAD_SHORT_TUNING_COMPLETE.md  _tmp_compare_strategies.py  advanced_mt5_monitor_gui.py  fix_indent.py  ibkr_order_management.py  main.py  pyproject.toml  remove_autostart.bat  requirements.txt  run.py  run_bot.bat  setup_autostart.bat  sizing_simulation.py  test_eurjpy_fix.py  test_strategy_validate.py  tv.py
backups/: IMPLEMENTATION_SUMMARY.md  LIVE_TRADING_FIX_SUMMARY.md  README.md  START_HERE.md  TECHNICAL_IMPLEMENTATION_DETAILS.md  advanced_mt5_monitor_gui.py  build_exe.bat  fix_encoding.py  fix_indent.py  gbpusd.py  main.py  parameters.json  setup.ps1  temp_fix.py  test_eurjpy_fix.py  usdchf.py
docs/: CRITICAL_FIXES_AND_ALIGNMENT.md  CRITICAL_FIXES_OCT24_2025.md  DALIO_ALLOCATION_SYSTEM.md  DAY_EXIT_REPAIR_PLUGIN.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  ENTRY_CONDITIONS_VERIFICATION.md  GITHUB_UPLOAD_GUIDE.md  LIVE_LIFECYCLE_BRIDGE_README.md  MT5_EMA_QUICK_SETUP.md  MT5_HISTORICAL_DATA_SETUP.md  MT5_LOG_ANALYSIS.md  PARAMETER_PROFILES.md  POSITION_SIZING_FIX_CRITICAL.md  README.md  (+8 more)
(+229 files in other folders)
