[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5-live-trading-bot"
version = "1.0.0"
description = "Independent MT5 Live Trading Bot with Sunrise Strategies"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "MetaTrader5>=5.0.5200",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "backtrader>=1.9.76",
    "pathlib",
]

[tool.setuptools]
packages = ["src", "strategies"]

[tool.setuptools.package-dir]
"" = "."

[tool.pylance]
include = ["src", "strategies"]
extraPaths = ["strategies"]

[tool.pyright]
include = ["src", "strategies"]
extraPaths = ["strategies"]